[package]
name = "onair"
version = "0.1.0"
authors = ["YushiOMOTE <yushiomote@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
futures-util = "0.3.21"
poem = { version = "1.2.56", features = ["websocket"] }
serde = "1.0.136"
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
